# tadious

./: README.md
tadious/: Cargo.toml
tadious-cli/: .env  Cargo.toml
tadious-cli/src/: main.rs
tadious/src/: main.rs
