[package]
name = "tadious"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
public-ip = "0.2"
tokio = { version = "1.9.0", features = ["full"] }
thrussh = "0.33.5"
thrussh-keys = "0.21.0"
futures = "0.3.16"
anyhow = "1.0"